fixed range slider on mobiles

--- a/app/sass/responsive.scss
+++ b/app/sass/responsive.scss
@@ -1462,7 +1462,8 @@
 			padding-top: 54px;
 			margin-left: 20px;
 			margin-right: 20px;
-			margin-bottom: 20px;
+			margin-bottom: 0;
+			padding: 54px 0 20px;
 		}
 	}
 	.question{
